--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-PORT = 3500
-MYSQL_HOST = localhost
-MYSQL_USER = root
-MYSQL_PASSWORD = 
-MYSQL_DB = mayber
+database: mayber
+username: pmozz3a888q98cgkw5b0
+host: aws.connect.psdb.cloud
+password: pscale_pw_I6TJvP3VW78SrjZOPTJDqOpglEnyVM0jCRFPfgXD45V
