Conect to alwaysdata

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 3500
-MYSQL_HOST = localhost
-MYSQL_USER = root
-MYSQL_PASSWORD = 
-MYSQL_DB = mayber
+MYSQL_HOST = mysql-mayberserver.alwaysdata.net
+MYSQL_USER = 310329
+MYSQL_PASSWORD = adminmayber2023
+MYSQL_DB = mayberserver_mayber
