--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "this is back end",
   "main": "index.js",
   "scripts": {
+    "build": "npm i",
     "start": "nodemon -e js,ejs,html ./index"
   },
   "author": "brawlcodak",
